--- a/BoidBox/BoidBox/BoidBox.vcxproj
+++ b/BoidBox/BoidBox/BoidBox.vcxproj
@@ -103,7 +103,7 @@
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)FMOD\lib\fmod.dll" "$(OutDir)" /s /r /y /q
 xcopy "$(SolutionDir)DGL\lib\$(Platform)\DGL_d.dll" "$(OutDir)" /s /r /y /q
-xcopy "$(SolutionDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
+xcopy "$(SolutionDir)\BoidBox\Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -126,7 +126,7 @@ xcopy "$(SolutionDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)DGL\lib\$(Platform)\DGL.dll" "$(OutDir)" /s /r /y /q
-xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q
+xcopy "$(ProjectDir)\BoidBox\Assets\*" "$(OutDir)Assets\" /s /r /y /q
 xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -147,7 +147,7 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)FMOD\lib\fmod.dll" "$(OutDir)" /s /r /y /q
 xcopy "$(SolutionDir)DGL\lib\$(Platform)\DGL_d.dll" "$(OutDir)" /s /r /y /q
-xcopy "$(SolutionDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
+xcopy "$(SolutionDir)\BoidBox\Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -170,15 +170,22 @@ xcopy "$(SolutionDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)DGL\lib\$(Platform)\DGL.dll" "$(OutDir)" /s /r /y /q
-xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q
+xcopy "$(ProjectDir)\BoidBox\Assets\*" "$(OutDir)Assets\" /s /r /y /q
 xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseSystem.h" />
     <ClInclude Include="Boids.h" />
     <ClInclude Include="BoidTest.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="BasicObstacles.h" />
+    <ClInclude Include="GryphonDebug.h" />
+    <ClInclude Include="MichaelDebug.h" />
+    <ClInclude Include="OpenScene.h" />
+    <ClInclude Include="PlatformSystem.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneSystem.h" />
     <ClInclude Include="SoundTest.h" />
     <ClInclude Include="Level1.h" />
     <ClInclude Include="List.h" />
@@ -193,27 +200,38 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClInclude Include="SpriteSource.h" />
     <ClInclude Include="Stream.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TayLeeDebug.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="TylerDebug.h" />
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseSystem.cpp" />
     <ClCompile Include="Boids.cpp" />
     <ClCompile Include="BoidTest.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="GryphonDebug.cpp" />
     <ClCompile Include="Hunters.cpp" />
     <ClCompile Include="Level1.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="MichaelDebug.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="OpenScene.cpp" />
     <ClCompile Include="PlaceBlock.cpp" />
+    <ClCompile Include="PlatformSystem.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneSystem.cpp" />
     <ClCompile Include="SoundSystem.cpp" />
     <ClCompile Include="BasicObstacles.cpp" />
     <ClCompile Include="SoundTest.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteSource.cpp" />
+    <ClCompile Include="TayLeeDebug.cpp" />
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="TylerDebug.cpp" />
     <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
