--- a/BoidBox/BoidBox/BoidBox.vcxproj.filters
+++ b/BoidBox/BoidBox/BoidBox.vcxproj.filters
@@ -73,18 +73,6 @@
     <Filter Include="Source Files\Game Systems\Placement">
       <UniqueIdentifier>{8ee06acb-7699-4a5d-aa0a-047a1219f266}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Generic Systems">
-      <UniqueIdentifier>{df75e2bd-1585-449a-ab0e-64dc779d7ce0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Generic Systems\SoundSystems">
-      <UniqueIdentifier>{9d21d3a7-71e1-4782-b0db-d77196a114d8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Generic Systems\Positions">
-      <UniqueIdentifier>{ef8c5ec3-04f7-4210-9440-f0b4dd9f5027}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Generic Systems\Graphics">
-      <UniqueIdentifier>{e5144546-f22e-48e8-8478-84ca7a87a8f2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Deprecated">
       <UniqueIdentifier>{6826dc10-6b3d-4118-b1b9-1b58527e8e98}</UniqueIdentifier>
     </Filter>
@@ -99,6 +87,18 @@
     </Filter>
     <Filter Include="Header Files\Engine\Scenes\Game Scenes">
       <UniqueIdentifier>{3ad11392-879d-4610-aabc-dc2dd46564bf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Helper\Generic Systems">
+      <UniqueIdentifier>{df75e2bd-1585-449a-ab0e-64dc779d7ce0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Helper\Generic Systems\SoundSystems">
+      <UniqueIdentifier>{9d21d3a7-71e1-4782-b0db-d77196a114d8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Helper\Generic Systems\Positions">
+      <UniqueIdentifier>{ef8c5ec3-04f7-4210-9440-f0b4dd9f5027}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Helper\Generic Systems\Graphics">
+      <UniqueIdentifier>{e5144546-f22e-48e8-8478-84ca7a87a8f2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -198,19 +198,19 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Transform.cpp">
-      <Filter>Source Files\Generic Systems\Positions</Filter>
+      <Filter>Source Files\Helper\Generic Systems\Positions</Filter>
     </ClCompile>
     <ClCompile Include="Vector2D.cpp">
-      <Filter>Source Files\Generic Systems\Positions</Filter>
+      <Filter>Source Files\Helper\Generic Systems\Positions</Filter>
     </ClCompile>
     <ClCompile Include="Hunters.cpp">
       <Filter>Source Files\Game Systems\Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
-      <Filter>Source Files\Generic Systems\Graphics</Filter>
+      <Filter>Source Files\Helper\Generic Systems\Graphics</Filter>
     </ClCompile>
     <ClCompile Include="SoundSystem.cpp">
-      <Filter>Source Files\Generic Systems\SoundSystems</Filter>
+      <Filter>Source Files\Helper\Generic Systems\SoundSystems</Filter>
     </ClCompile>
     <ClCompile Include="Object.cpp">
       <Filter>Source Files\Engine</Filter>
@@ -219,10 +219,10 @@
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
     <ClCompile Include="Sprite.cpp">
-      <Filter>Source Files\Generic Systems\Graphics</Filter>
+      <Filter>Source Files\Helper\Generic Systems\Graphics</Filter>
     </ClCompile>
     <ClCompile Include="SpriteSource.cpp">
-      <Filter>Source Files\Generic Systems\Graphics</Filter>
+      <Filter>Source Files\Helper\Generic Systems\Graphics</Filter>
     </ClCompile>
     <ClCompile Include="PlaceBlock.cpp">
       <Filter>Source Files\Game Systems\Placement</Filter>
