--- a/BoidBox/BoidBox/BoidBox.vcxproj
+++ b/BoidBox/BoidBox/BoidBox.vcxproj
@@ -179,8 +179,10 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClInclude Include="BaseSystem.h" />
     <ClInclude Include="Boids.h" />
     <ClInclude Include="BoidTest.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="BasicObstacles.h" />
+    <ClInclude Include="Goal.h" />
     <ClInclude Include="GryphonDebug.h" />
     <ClInclude Include="Trace.h" />
     <ClInclude Include="MichaelDebug.h" />
@@ -213,7 +215,9 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClCompile Include="BaseSystem.cpp" />
     <ClCompile Include="Boids.cpp" />
     <ClCompile Include="BoidTest.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Goal.cpp" />
     <ClCompile Include="GryphonDebug.cpp" />
     <ClCompile Include="Hunters.cpp" />
     <ClCompile Include="Level1.cpp" />
