--- a/BoidBox/BoidBox/BoidBox.vcxproj.filters
+++ b/BoidBox/BoidBox/BoidBox.vcxproj.filters
@@ -219,6 +219,9 @@
     <ClInclude Include="FirstLevel.h">
       <Filter>Header Files\Engine\Scenes\Game Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="SecondLevel.h">
+      <Filter>Header Files\Engine\Scenes\Game Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -327,6 +330,9 @@
       <Filter>Source Files\Game Systems\Obstacles</Filter>
     </ClCompile>
     <ClCompile Include="FirstLevel.cpp">
+      <Filter>Source Files\Engine\Scenes\Game Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="SecondLevel.cpp">
       <Filter>Source Files\Engine\Scenes\Game Scenes</Filter>
     </ClCompile>
   </ItemGroup>
